--- a/lab8/views/layouts/main.handlebars
+++ b/lab8/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Palindrome Checker</title>
-    <link rel="stylesheet" href="/public/css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">  
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
@@ -17,6 +18,7 @@
     <footer>
         Albert Tang, 10406380, I pledge my honor that I have abided by the Stevens Honor System. 3/4 Computer Science Major
     </footer>
+    <script type="text/javascript" src="/js/palindrome.js"></script>
 </body>
 
 </html>
