--- a/lab9/views/layouts/main.handlebars
+++ b/lab9/views/layouts/main.handlebars
@@ -2,15 +2,51 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>Login Screen</title>
+        <title>Simple Authentification</title>
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet'>
+        <link rel='stylesheet' href='/css/bootstrap.css'>
+        <link rel='stylesheet' href='/css/main.css'>
     </head>
     <body>
-        <header>
-            Login Screen
-        </header>
-        <main>
-            {{{body}}}
+        <div class="container">
+            <header class="header clearfix">
+                <nav>
+                    <ul class="nav nav-pills float-right">
+                        {{#if user}}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/private">Private</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout">Logout</a>
+                            </li>
+                        {{else}}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/">Log In</a>
+                            </li>
+                        {{/if}}
+                    </ul>
+                </nav>
+                <h3 class="text-muted">Simple Authenticator</h3>
+            </header>
+        <main role="main">
+            <div class="col-lg-12">
+                {{#if success_msg}}
+                    <div class="alert alert-success" role="alert">
+                        {{success_msg}}
+                    </div>
+                {{/if}}
+                {{#if error}}
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error:</strong> {{error}}
+                    </div>
+                {{/if}}
+            </div>
+            <div class="flex-wrapper pad">
+                {{{body}}}
+            </div>
         </main>
-    </body>
+
+    <footer class="footer">
+    <p>2017 Simple Authenticator</p>
+    </footer>
 </html>
