--- a/lab9/views/login.handlebars
+++ b/lab9/views/login.handlebars
@@ -1,10 +1,14 @@
-{{#if errors}}
-    {{#each errors}}
-        <div>{{msg}}</div>
-    {{/each}}
-{{/if}}
+<h1 class='page-header'>
+    Login Screen
+</h1>
 <form method='post' action='/login'>
-    <label for='username'>username:</label> <input type='text' name='username'><br>
-    <label for='password'>password:</label> <input type='password' name='password'><br>
-    <button>Log in</button>
+    <div class='form-group'>
+        <label for='username'>Username:</label>
+        <input type='text' class='form-control' name='username' placeholder='Username'>
+    </div>
+    <div class='form-group'>
+        <label for='password'>Password:</label>
+        <input type='password' class='form-control' name='password' placeholder='Password'>
+    </div>
+    <button type='submit' class='btn btn-default'>Log in</button>
 </form>
