--- a/lab9/views/private.handlebars
+++ b/lab9/views/private.handlebars
@@ -1,6 +1,6 @@
 <h1 class='page-header'>Hello, {{user.firstName}} {{user.lastName}}</h1>
 <h2 class='col-lg-12'>Here's some info about you:</h2>
-<div class="container">
+<dl class="container">
     <dt class='col-md-4'>Username:</dt>
         <dd class="col-md-6 offset-1">{{user.username}}</dd>
     <dt class='col-md-4'>First Name:</dt>
@@ -11,4 +11,4 @@
         <dd class='col-md-6 offset-1'>{{user.profession}}</dd>
     <dt class='col-md-4'>Biography:</dt>
         <dd class='col-md-12 offset-1'>{{user.bio}}</dd>
-</div>
+</dl>
