--- a/lab9/views/layouts/main.handlebars
+++ b/lab9/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
                 </nav>
                 <h3 class="text-muted">Simple Authenticator</h3>
             </header>
-        <main role="main">
+        <main>
             <div class="col-lg-12">
                 {{#if success_msg}}
                     <div class="alert alert-success" role="alert">
@@ -45,7 +45,6 @@
                 {{{body}}}
             </div>
         </main>
-
     <footer class="footer">
     <p>2017 Simple Authenticator</p>
     </footer>
