--- a/lab9/views/login.handlebars
+++ b/lab9/views/login.handlebars
@@ -3,11 +3,11 @@
 </h1>
 <form method='post' action='/login'>
     <div class='form-group'>
-        <label for='username'>Username:</label>
+        <label>Username:</label>
         <input type='text' class='form-control' name='username' placeholder='Username'>
     </div>
     <div class='form-group'>
-        <label for='password'>Password:</label>
+        <label>Password:</label>
         <input type='password' class='form-control' name='password' placeholder='Password'>
     </div>
     <button type='submit' class='btn btn-default'>Log in</button>
