--- a/lab9/views/login.handlebars
+++ b/lab9/views/login.handlebars
@@ -3,12 +3,12 @@
 </h1>
 <form method='post' action='/login'>
     <div class='form-group'>
-        <label>Username:</label>
-        <input type='text' class='form-control' name='username' placeholder='Username'>
+        <label for='username'>Username:</label>
+        <input type='text' class='form-control' id='username' name='username' placeholder='Username'>
     </div>
     <div class='form-group'>
-        <label>Password:</label>
-        <input type='password' class='form-control' name='password' placeholder='Password'>
+        <label for='password'>Password:</label>
+        <input type='password' class='form-control' id='password' name='password' placeholder='Password'>
     </div>
     <button type='submit' class='btn btn-default'>Log in</button>
 </form>
